fixed video overflow

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -555,7 +555,7 @@ a {
 .video-container {
 	max-width: 75rem;
 	margin: auto;
-	margin-bottom: 4rem;
+	padding-bottom: 4rem;
 }
 
 .video-wrapper {
